clusters/olympus/portainer/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: dock.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.compute.nwlnexus.net
    launcher.olympus.io/enabled: "true"
    launcher.olympus.io/display-name: "Portainer"
    launcher.olympus.io/group: "Platform"
    launcher.olympus.io/icon: "container"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dock.nwlnexus.net`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
  tls:
    secretName: portainer-tls
